# calc-tblg

./: .gitignore  Shakefile-inner.hs  Shakefile.hs  general-spatial-params.toml  general-spatial-params.yaml  generate  hex.cabal  ignore-keys  max-shifts.json  only-keys  positions-bad.json  positions.json  shake  shakehc  shakexc  stack.yaml  update-inner
dev-scripts/: gather-package-imports
hex-sols/: Main.hs  hex-sols.cabal  new-positions.json  out-100.json  positions.py  read-shifts  shift-db
hex-sols/hnf-search/: Cargo.toml
hex-sols/hnf-search/src/: main.rs
junk/: README.md  removed-from-positions.py
junk/scripts/: collect-zpols  preprocess-band-yaml2  sp2post
junk/src/: BandAssocs.hs
junk/src/Algo/: Hnf.hs
junk/src/Algo/Hnf/: Impl.hs  Impl2.hs  Impl3.hs
junk/src/Phonopy/BandYaml/: LL1.hs
scripts/: .make-inputs.swp  assemble  bandfix  degnuplot  dot  eigenvectors-alt  engnuplot  extended-qpoints  filter-keys  gen-all-irreps  gen-eigenvectors  install  make-inputs  make-poscar  preprocess-band-yaml  read-data  sp2run  vasp-lattice-param  wobble  z-polarized
scripts/cli/: instance  shake
scripts/sp2-template/: post
scripts/sp2-template/input/: both.gplot.template  config.json  hsym.json
src/: Band.hs  BandAssocs.hs  FunctorUtil.hs  GeneralUtil.hs  JsonUtil.hs  PathUtil.hs  ShakeUtil.hs  StateUtil.hs  TestUtil.hs  UnixUtil.hs  incoherent.hs
src/Band/: Aliases.hs  BandYaml.hs  Fold.hs  NonzeroDots.hs
src/Band/Oracle/: API.hs  Phonopy.hs
src/Band/Oracle/Phonopy/: BandYaml.hs
src/Band/Oracle/Phonopy/BandYaml/: LL1.hs  Npy.hs  Preprocessed.hs
src/Phonopy/: BandYaml.hs  EigenvectorCache.hs  IO.hs  Types.hs
src/Phonopy/BandYaml/: LL1.hs  Npy.hs  Preprocessed.hs
src/Rules/: Comp.hs  Local.hs  Meta.hs
src/ShakeUtil/: Defs.hs  Types.hs  Wrapper.hs
src/ShakeUtil/Wrapper/: Internal.hs
src/Turtle/: Please.hs
templates/base-input/: band.gplot.template  both.gplot.template  filter.gplot.template  folded-filter.gplot.template  folded.gplot.template  perturb1.gplot.template  prelude.gplot  write-band-svg.gplot
templates/base-input/gplot-helper/: prelude.gplot
templates/base-input/gplot-templates/: band.gplot.template
templates/root/abc/ab/: layers.toml  spatial-params.toml
templates/root/abc/aba/: layers.toml
templates/root/abc/abc/: layers.toml
templates/root/input/: golden-search.yaml  layer-linear-search.toml  mutate.py  param-a-linear-search.toml  sp2-config.json
templates/root/input/gplot-helper/: write-band-png.gplot  write-big-band-svg.gplot
templates/root/input/gplot-templates/: both.gplot.template  filter.gplot.template  folded-filter-both.gplot.template  zpol.gplot.template
templates/root/proj/params/abc/: layers.toml  supercells.json
templates/root/proj/params/abc-007-a/: layers.toml  supercells.json
templates/root/test1/: TODO
templates/root/test1/ab/: moire.vasp
templates/root/test1/ab2/: moire.vasp
templates/sp2-template/input/: config.json  filter.gplot.template
test/: Spec.hs  TestUtils.hs
test/Band/: FoldTest.hs
