-- This is a mostly-fake cabal file to provide stack with deps lists.
-- (note: I am... not entirely sure what 'stack build' is doing
--         when it "installs" the library.)

name:                hex
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules: JsonUtil
                 , ShakeUtil
                 , FunctorUtil
                 , ShakeUtil.Defs
                 , ShakeUtil.Types
                 , ShakeUtil.Wrapper
                 , ShakeUtil.Wrapper.Internal
                 , GeneralUtil
                 , Band
                 , Band.Aliases
                 , Band.Fold
                 , Band.NonzeroDots
                 , Phonopy.BandYaml
                 , Phonopy.BandYaml.Npy
                 , Phonopy.EigenvectorCache
                 , Phonopy.IO
                 , Phonopy.Types
                 , Turtle.Please
                 , UnixUtil
                 , TestUtil
  build-depends: base >= 4.7 && < 5
               , Glob
               , exphp-prelude
               , aeson
               , attoparsec
               , ansi-terminal
               , attoparsec-binary
               , bytestring
               , containers
               , binary
               , vector-binary-instances
               , data-binary-ieee754
               , zlib
               , directory
               , exceptions
               , deepseq
               , newtype
               , extra
               , filepath
               , linear
               , hmatrix
               , foldl
               , lens
               , lens-aeson
               , managed
               , mtl
               , random
               , regex >= 0.12.0.0
               , shake
               , string-convert
               , system-filepath
               , terrible-filepath-subst
               , text
               , transformers
               , turtle
               , turtle-eggshell
               , unix
               , unordered-containers
               , utility-ht
               , conduit
               , conduit-combinators
               , vasp-poscar
               , vector >= 0.12.0.0
               , vector-algorithms
               , yaml
               , process
               , QuickCheck
               , tasty
               , tasty-hunit
               , tasty-quickcheck
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -prof -fprof-auto -fprof-cafs
  default-language:    Haskell2010

test-suite hex-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:
  build-depends:       base
                     , attoparsec
                     , regex >= 0.12.0.0
                     , text
                     , hex
                     , mtl
                     , QuickCheck
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , exphp-prelude
                     , aeson
                     , attoparsec
                     , ansi-terminal
                     , attoparsec-binary
                     , base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , binary
                     , vector-binary-instances
                     , data-binary-ieee754
                     , zlib
                     , directory
                     , exceptions
                     , deepseq
                     , newtype
                     , extra
                     , filepath
                     , linear
                     , hmatrix
                     , foldl
                     , lens
                     , lens-aeson
                     , managed
                     , mtl
                     , random
                     , regex >= 0.12.0.0
                     , shake
                     , string-convert
                     , system-filepath
                     , terrible-filepath-subst
                     , text
                     , transformers
                     , turtle
                     , turtle-eggshell
                     , unix
                     , unordered-containers
                     , utility-ht
                     , conduit
                     , conduit-combinators
                     , vasp-poscar
                     , vector
                     , vector-algorithms
                     , yaml
                     , process
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror -fprof-auto -fprof-cafs
  default-language:    Haskell2010
