name:                hex
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:  src
  exposed-modules: Band
                 , Band.Aliases
                 , Band.Fold
                 , Band.NonzeroDots
                 , FunctorUtil
                 , GeneralUtil
                 , JsonUtil
                 , Phonopy.BandYaml
                 , Phonopy.BandYaml.Npy
                 , Phonopy.EigenvectorCache
                 , Phonopy.IO
                 , Phonopy.Types
                 , ShakeUtil
                 , ShakeUtil.Defs
                 , ShakeUtil.Types
                 , ShakeUtil.Wrapper
                 , ShakeUtil.Wrapper.Internal
                 , TestUtil
                 , Turtle.Please
                 , UnixUtil
  build-depends: base >= 4.7 && < 5
               , aeson
               , ansi-terminal
               , attoparsec
               , attoparsec-binary
               , binary
               , bytestring
               , containers
               , data-binary-ieee754
               , directory
               , exphp-prelude
               , extra
               , filepath
               , hmatrix
               , lens
               , lens-aeson
               , linear
               , mtl
               , process
               , QuickCheck
               , regex >= 0.12.0.0
               , shake
               , tasty
               , tasty-hunit
               , tasty-quickcheck
               , terrible-filepath-subst
               , text
               , time
               , transformers
               , turtle
               , turtle-eggshell
               , unix
               , vector >= 0.12.0.0
               , vector-binary-instances
               , yaml
               , zlib
               -- used by Shakefile-inner.hs;
               -- included here so intero can find them
               , foldl
               , vasp-poscar
  ghc-options:         -threaded -fprof-auto -fprof-cafs
  default-language:    Haskell2010

test-suite hex-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:
  build-depends: base >= 4.7 && < 5
               , hex
               , tasty
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror -fprof-auto -fprof-cafs
  default-language:    Haskell2010
